--- a/Lab01_ejw.ucf
+++ b/Lab01_ejw.ucf
@@ -1,9 +1,19 @@
 #====== INPUTS =======
-NET "A" LOC = "K18";
-NET "B" LOC = "H18";
-NET "C" LOC = "G18";
+NET "A[7]" LOC = "R17";
+NET "A[6]" LOC = "N17";
+NET "A[5]" LOC = "L13";
+NET "A[4]" LOC = "L14";
+NET "A[3]" LOC = "K17";
+NET "A[2]" LOC = "K18";
+NET "A[1]" LOC = "H18";
+NET "A[0]" LOC = "G18";
 
 #======OUTPUTS======
-NET "X" LOC = "K15";
-NET "Y" LOC = "J15";
-NET "Z" LOC = "J14";
+NET "X[7]" LOC = "R4";
+NET "X[6]" LOC = "F4";
+NET "X[5]" LOC = "P15";
+NET "X[4]" LOC = "E17";
+NET "X[3]" LOC = "K14";
+NET "X[2]" LOC = "K15";
+NET "X[1]" LOC = "J15";
+NET "X[0]" LOC = "J14";
